Fix: 1. Removed duplicate songs from playlists 2. form now says 'instrumentals only' 3. changed bar contrast to previous level (could change back)

--- a/api/static/styles/style.css
+++ b/api/static/styles/style.css
@@ -254,7 +254,7 @@ input[type="range"] {
     width: 100%;
     height: 10px;
     border-radius: 5px;
-    background: linear-gradient(to right, #d9d9d9, #ffffff); /* Dark blue to light blue */
+    background: linear-gradient(to right, #636262, #ffffff);
     outline: none;
 }
 
